--- a/css/index.css
+++ b/css/index.css
@@ -2,19 +2,47 @@
   box-sizing: border-box;
 }
 
-.participant-inputs {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 10px;
-}
-
-.participant-inputs__item {
-  display: flex;
+body {
+  background-image: url("../img/background.jpg");
 }
 
 .todoapp-form {
+  font-family: 'Itim', cursive;
+  color: aliceblue;
+  border-radius: 0.5rem;
   display: flex;
+  justify-content: center;
+  background-image: url("../img/Mirage.jpg");
   flex-direction: column;
-  align-items: flex-start;
-  gap: 10px;;
+  align-items: center;
+  padding: 5px;
+  margin-left: 30%;
+  margin-right: 30%;
+  margin-top: 10%;
+
 }
+
+label {
+  font-size: 1.5rem;
+ 
+}
+.participant-input{
+  margin-top: 10px;
+  background: #0f0c29;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to top, #24243e, #302b63, #0f0c29);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to top, #24243e, #302b63, #0f0c29); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  font-style: italic;
+  color: azure;
+}
+
+#butt{
+  width: 100%;
+  margin-top: 10px;
+}
+
+.btn{
+  width: 50%;
+  margin-top: 10px;
+}
+
+input::-webkit-input-placeholder { color:white; }
