--- a/css/index.css
+++ b/css/index.css
@@ -46,3 +46,16 @@ label {
 }
 
 input::-webkit-input-placeholder { color:white; }
+
+#next-page {
+  color: aliceblue;
+  width: 300px;
+  font-size: 1.5rem;
+}
+
+header{
+  text-decoration: none;
+  display: flex;
+  justify-content: flex-end;
+  margin-right: 1rem;
+}
