--- a/css/tasks.css
+++ b/css/tasks.css
@@ -1,14 +1,61 @@
 * {
-    box-sizing: border-box;
-  }
-  
-  body {
-    background-image: url("../img/background.jpg");
-  }
+  box-sizing: border-box;
+}
 
-  .title {
-    color: ivory;
-    text-align: center;
-  }
+body {
+  background-image: url("../img/background.jpg");
+}
 
-  
+.title {
+  color: ivory;
+  text-align: center;
+}
+
+.task__participants {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 5px;
+}
+
+.task__participants-item {
+  border: 1px solid black;
+  padding: 8px 5px;
+}
+
+.tasks {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding-left: 0;
+}
+
+.task {
+  padding: 10px;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  position: relative;
+  z-index: 1;
+}
+
+.task.active::before {
+  position: absolute;
+  content: '';
+  display: block;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 187, 0, 0.8);
+  z-index: -1;
+}
+
+.task p {
+  margin: 0;
+}
+
+.deleteTasks.btn {
+  background-color: white;
+  border: 1px solid black;
+}
